--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "prettier": "^1.15.3",
+    "react-scripts": "^2.1.1",
+    "react-test-renderer": "^16.6.3",
+    "webpack-bundle-analyzer": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "lint": "eslint --cache --fix .",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
