--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-https-redirect": "^1.0.11",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
